--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://keen-wilson-29f72a.netlify.app/"
+baseURL = "quizzical-mclean-323e10.netlify.app/"
 languageCode = "zh-cn"
 title = "limoplus"
 theme = "github-style"
