--- a/config.toml
+++ b/config.toml
@@ -15,8 +15,8 @@ pygmentsUseClasses = true
   linkedin = "MeiK2333"
   instagram = "MeiK2333"
   tumblr = "MeiK2333"
-  email = "meik2333@gmail.com"
-  url = "https://meik2333.com"
+  email = "dastourani.0@gmail.com"
+  url = "https://dastourani.ir"
   keywords = "blog, google analytics"
   rss = true
   lastmod = true
